--- a/task002/css/style.css
+++ b/task002/css/style.css
@@ -4,6 +4,18 @@
     margin: -16px;
 }
 
+#bottom {
+    background-color: black;
+    height: 70px;
+    padding: 20px;
+    margin: -16px;
+}
+
+p.copyright {
+    color: #FFFFFF;
+    text-align: center;
+}
+
 img.logo {
     float: left;
     height: 70px;
