--- a/task005/css/style.css
+++ b/task005/css/style.css
@@ -63,8 +63,8 @@ img.logo {
     border-bottom: solid 1px gray;
     border-right: solid 1px gray;
     margin-top: 20px;
-    width: 60%;
-
+    margin-right: 20px;
+    width: 50%;
 }
 
 #main-body-left {
@@ -72,10 +72,12 @@ img.logo {
     padding: 20px;
     border-bottom: solid 1px gray;
     border-right: solid 1px gray;
-    width: 30%;
-    float: right;
-    display: block;
-    margin-top: -865px;
+    width: 300px;
+    margin-right: 20px;
+    position: absolute;
+    right: 20px;
+    left: auto;
+    top: 110px;
 }
 
 #main-body.bot {
