--- a/task005/css/style.css
+++ b/task005/css/style.css
@@ -1,7 +1,13 @@
+* {
+     box-sizing:border-box;
+     margin: 0;
+     padding: 0;
+     font: 14px/24px 微软雅黑,arial
+ }
+
+
 #header {
-    background-color: dimgrey;
-    height: 70px;
-    margin: -16px;
+    width:100%;height:60px;background:#333
 }
 
 #bottom {
@@ -9,6 +15,7 @@
     height: 70px;
     padding: 20px;
     margin: -16px;
+    bottom: 0px;
 }
 
 p.copyright {
@@ -51,33 +58,29 @@ img.logo {
 
 #passage-body {
     background-color: darkgray;
-    margin: 16px auto;
-    padding: 20px;
-    margin-right: -8px;
-    margin-left: -8px;
+    padding:20px;
+    position:relative;  /*important*/
+}
+
+.main-content {
+    background:#fff;
+    border:1px solid #ccc;
+    margin-bottom:20px;
+    padding:30px
 }
 
 #main-body {
-    background-color: #FFFFFF;
-    padding: 20px;
-    border-bottom: solid 1px gray;
-    border-right: solid 1px gray;
-    margin-top: 20px;
-    margin-right: 20px;
-    width: 50%;
+    margin:0 380px 0 0;
 }
 
-#main-body-left {
-    background-color: #FFFFFF;
-    padding: 20px;
-    border-bottom: solid 1px gray;
-    border-right: solid 1px gray;
-    width: 300px;
-    margin-right: 20px;
-    position: absolute;
-    right: 20px;
-    left: auto;
-    top: 110px;
+#main-body-right {
+    position:absolute;
+    top:20px;
+    right:20px;
+    width:360px;
+    background:#fff;
+    border:1px solid #ccc;
+    padding:20px;
 }
 
 #main-body.bot {
@@ -146,6 +149,7 @@ table td a:hover {
     padding: 10px 25px 10px 25px;
     color: #FFF;
     box-shadow: 1px 1px 5px #000000;
+    height: 40px;
 }
 
 img {
